ajout joueur 2 html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,34 @@
   <script src="script.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
+  <div class="bloc">
+    <div class="joueur-1 active">
+      <div class="nom-1">Joueur 1</div>
+      <div class="joueur-1-score"></div>
+
+      <div class="joueur-1-boite">
+        <div class="joueur-1-round"></div>
+        <div class="joueur-1-round-score"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="bloc">
+    <div class="joueur-2">
+      <div class="nom-2">Joueur 2</div>
+      <div class="joueur-2-score"></div>
+
+      <div class="joueur-2-boite">
+        <div class="joueur-2-round"></div>
+        <div class="joueur-2-round-score"></div>
+      </div>
+    </div>
+  </div>
 
 
 
